--- a/style.css
+++ b/style.css
@@ -1,15 +1,28 @@
 .bullets ul li {
-    text-align: left;
-	padding: 15px;
+   text-align: left;
+   padding: 15px;
 }
 
 .smbullets ul li {
-    text-align: left;
+   text-align: left;
+}
+
+.bullets ul li ul {
+   font-size: 20pt;
+   padding-left: 30px;
+}
+
+.bullets ul li ul li {
+   padding-bottom: 2px;
 }
 
 blockquote {
-	padding-left: 35px;
-	padding-right: 10px;
-	font-size: 20pt;
+   padding-left: 35px;
+   padding-right: 10px;
+   font-size: 20pt;
 }
 
+pre, code {
+   font-size: 20pt;
+   font-family: courier;
+}
