--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .bullets ul li {
    text-align: left;
-   padding: 15px;
+   padding: 0px;
 }
 
 .smbullets ul li {
@@ -13,7 +13,7 @@
 }
 
 .bullets ul li ul li {
-   padding-bottom: 2px;
+   padding-bottom: 0px;
 }
 
 blockquote {
@@ -21,8 +21,126 @@ blockquote {
    padding-right: 10px;
    font-size: 20pt;
 }
-
+/*
 pre, code {
    font-size: 20pt;
    font-family: courier;
+}
+*/
+.slide {
+    background: -webkit-gradient(linear, left top, left bottom, from(#d9dee2), to(#f0f1f3));
+    background: -moz-linear-gradient(top, #d9dee2, #f0f1f3);
+    font-family: 'gill sans', 'helvetica nueve', 'lucida grande', verdana;
+}
+
+a {
+    color: #305892;
+}
+
+.content {
+    font-weight: 200;
+    margin-top: 0;
+    padding: 10px 20px;
+}
+
+h1 {
+    color: #535353;
+    font-size: 4.4em;
+    font-weight: 200;
+    margin: 10px 0 0 5px;
+}
+
+h2 {
+    color: #585858;
+    font-size: 2.3em;
+    font-weight: 200;
+    margin: 0 0 0 5px;
+}
+
+h3 {
+    color: #797979;
+    font-size: 1.9em;
+    font-weight: 200;
+    margin: 0 0 0 5px;
+}
+
+.splash h1 {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 35%;
+}
+
+.content p,
+.content ul,
+.content ol,
+.content pre {
+    /*font-size: 2em !important;*/
+    margin: 20px 5px !important;
+    text-align: left !important;
+}
+
+.content > ul {
+    padding-left: 0;
+}
+
+.content > ul > li {
+    padding: 0;
+}
+
+p, li {
+    line-height: 1.2em;
+	font-size: 26pt;
+}
+
+pre {
+    background-color: #FFFFFF;
+    border: #CCCCCC solid 1px;
+    padding: 4px;
+    font-size: 28px;
+}
+
+h1 code {
+    color: #494949;
+    font-size: 0.8em;
+}
+
+p code, li code {
+    color: #363636;
+}
+
+ul {
+    list-style-type: disc;
+}
+
+li {
+    margin: 12px 40px 6px;
+}
+
+strong {
+    font-weight: bold;
+}
+
+small {
+    color: #484848;
+    font-style: italic;
+}
+
+small code {
+    color: #606060;
+}
+
+.center > p,
+.center-text > p,
+.center-text > ol,
+.center-text > ul {
+    text-align: center !important;
+}
+
+.center-text ul {
+    list-style-type: none;
+}
+
+.center-text li {
+    margin-top: 20px;
 }
